--- a/path_agent/background.html
+++ b/path_agent/background.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js'></script>
     <script src="background.js"></script>
     <link href="background.css" rel="stylesheet">
   </head>
@@ -23,7 +24,7 @@
   <div class="tbl-content">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody id='tbody'>
-	      
+
       </tbody>
     </table>
   </div>
