Revisions to Chrome Miner

--- a/path_agent/background.html
+++ b/path_agent/background.html
@@ -2,31 +2,7 @@
   <head>
     <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js'></script>
-    <script src="background.js"></script>
-    <link href="background.css" rel="stylesheet">
+    <script src="js/background.js"></script>
+    <link href="css/background.css" rel="stylesheet">
   </head>
-  <section>
-  <!--for demo wrap-->
-  <h1>Path Network Miner</h1>
-  <div class="tbl-header">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Request</th>
-          <th>Status</th>
-          <th>Value</th>
-          <th>Time</th>
-        </tr>
-      </thead>
-    </table>
-  </div>
-  <div class="tbl-content">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody id='tbody'>
-
-      </tbody>
-    </table>
-  </div>
-</section>
 </html>
