--- a/path_agent/popup.html
+++ b/path_agent/popup.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 	<meta charset="UTF-8">
-	<title>PATH</title>
+	<title>Path Miner</title>
         <link rel="stylesheet" href="css/style.css">
 </head>
 <body id='particle-canvas'>
@@ -19,7 +19,7 @@
 		<a target="_blank" class="black-mode" id='statusToggle'>Status: <span id='status'>Loading</span></a>
 	</div>
 		<script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-		<script src='particle-network.min.js'></script>
+		<script src='js/particle-network.min.js'></script>
 		<script src="js/index.js"></script>
 		<script src="js/popup.js"></script>
 	</body>
